# tiny-code-agent

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/: ADDING_PROVIDERS.md  SKILL_WORKFLOW.md
src/tiny_code_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  tools.py
src/tiny_code_agent/providers/: __init__.py  factory.py  openai.py
tests/: test_agent.py  test_cli.py  test_config.py  test_providers.py  test_tools.py
