[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-code-agent"
version = "0.1.0"
description = "A beginner-friendly OpenAI-powered coding agent CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tiny Code Agent contributors" }]
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
tiny-code-agent = "tiny_code_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
